--- a/_includes/comments-providers/uyan.html
+++ b/_includes/comments-providers/uyan.html
@@ -1,4 +1,8 @@
-<!-- UY BEGIN -->
 <div id="uyan_frame"></div>
-<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2123100"></script>
-<!-- UY END -->
+<script type="text/javascript">
+    (function() {
+	            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+		            dsq.src = 'http://v2.uyan.cc/code/uyan.js?uid=2123100';
+			            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+				        })();
+</script>
