--- a/_includes/comments-providers/custom.html
+++ b/_includes/comments-providers/custom.html
@@ -1,3 +1,6 @@
 <!-- start custom comments snippet -->
-
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2123100"></script>
+<!-- UY END -->
 <!-- end custom comments snippet -->
